--- a/JS_Identity/JS_Identity/Views/web.config
+++ b/JS_Identity/JS_Identity/Views/web.config
@@ -23,6 +23,7 @@
 
   <appSettings>
     <add key="webpages:Enabled" value="false" />
+    <add key="owin:AppStartup" value="JS_Identity.IdentityConfig.cs" />
   </appSettings>
 
   <system.webServer>
